@@ -35,7 +35,7 @@
 		<br/>
 		<span>http://logtalk.org/</span>
 	</p>
-	<p class="date">Last updated on September 4, 2010</p>
+	<p class="date">Last updated on September 7, 2010</p>
 </div>
 
 <div class="toc">
